# ftmtxt2seq

./: CMakeLists.txt  LICENSE  ftmtxt.cpp  ftmtxt.h  itfile.cpp  itfile.h  main.cpp  outputfile.cpp  outputfile.h  util.cpp  util.h
